1brc test files and iterating finding newlines
Signed-off-by: Jelte Dirks <j.dirks@outlook.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(simdstuff VERSION 1.0.0 LANGUAGES CXX)
-set(CMAKE_ASM_FLAGS "-mfpu=neon -mfloat-abi=hard")
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS on)
-add_executable(simmyd src/main.cpp)
+
+add_executable(brc src/brc.cpp)
